--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         <div>
             <input id="passInput" class="inputs"> - Password</input>
         </div>
+        <div>
+            <input id="nameInput" class="inputs"> - Bot Name (Default:Small PP)</input>
+        </div>
+        <div>
+            <input id="picInput" class="inputs"> - Profile Picture</input>
+        </div>
     </body>
 </html>
